--- a/ConnectWith/Info.plist
+++ b/ConnectWith/Info.plist
@@ -6,5 +6,10 @@
     <string>This app uses Bluetooth to discover and connect to nearby Bluetooth devices.</string>
     <key>NSBluetoothPeripheralUsageDescription</key>
     <string>This app uses Bluetooth to discover and connect to nearby Bluetooth devices.</string>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>bluetooth-central</string>
+        <string>bluetooth-peripheral</string>
+    </array>
 </dict>
 </plist>
